--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: run test
           command: |
-            yarn test
+            npm run test
 workflows:
   build_test:
     jobs:
