--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ jobs:
     docker:
       - image: circleci/node:10
     steps:
-      - checkout
       - run:
           name: install dependecies
           command: |
@@ -13,3 +12,7 @@ jobs:
           name: run test
           command: |
             npm run test
+workflows:
+  build_test:
+    jobs:
+      -run_tests
