--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   run_tests:
     docker:
       - image: circleci/node:10
+    working_directory: ~/repo
     steps:
       - run:
           name: install dependecies
