--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
         environment:
           MYSQL_ROOT_PASSWORD: rootpw
           MYSQL_DATABASE: test_db
-          MYSQL_USER: admin
-          MYSQL_PASSWORD: password
+          MYSQL_USER: user
+          MYSQL_PASSWORD: passw0rd
     working_directory: ~/repo
     steps:
       - checkout
