--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ jobs:
       - image: circleci/mysql:8.0.4
         environment:
           MYSQL_ROOT_PASSWORD: rootpw
-          MYSQL_DATABASE: test_db
-          MYSQL_USER: user
-          MYSQL_PASSWORD: passw0rd
+          MYSQL_DATABASE: empatkali
+          MYSQL_USER: admin
+          MYSQL_PASSWORD: password
     working_directory: ~/repo
     steps:
       - checkout
@@ -16,6 +16,21 @@ jobs:
           name: install dependecies
           command: |
             yarn install --save
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
+          name: Install MySQL CLI; Import dummy data; run an example query
+          command: |
+            sudo apt-get install default-mysql-client
+            mysql -h 127.0.0.1 -u admin -password empatkali < sql-data/dummy.sql
+            mysql -h 127.0.0.1 -u admin -password --execute="SELECT * FROM empatkali.Persons"
       - run:
           name: run test
           command: |
