--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
           name: install dependecies
           command: |
             yarn install --save
+      -run:
           name: Waiting for MySQL to be ready
           command: |
             for i in `seq 1 10`;
