--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ HOSTNAME=http://localhost
 TOKEN_KEY=gGnyWtx21ztdIsxGG8CFxSPy7u
 
 SQL_URL=127.0.0.1
-SQL_USER=admin
+SQL_USER=root
 SQL_PASSWORD=password
 SQL_DATABASENAME=empatkali
 
