--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ TOKEN_KEY=gGnyWtx21ztdIsxGG8CFxSPy7u
 
 SQL_URL=127.0.0.1
 SQL_USER=root
-SQL_PASSWORD=new-password
+SQL_PASSWORD=password
 SQL_DATABASENAME=empatkali
 
 SQL_DIALECT=mysql
