--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ jobs:
       - image: circleci/node:10
       - image: circleci/mariadb:bionic
         environment:
+          - MYSQL_ROOT_PASSWORD: password
           - MYSQL_DATABASE: empatkali
-          - MYSQL_USER: root
           - MYSQL_PASSWORD: password
     working_directory: ~/repo
     steps:
