--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,9 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install MySQL CLI; Import dummy data; run an example query
+          name: Install MySQL CLI; Import
           command: |
+            sudo apt-get install default-mysql-client
             mysql -h 127.0.0.1 -u admin -password empatkali < sql-data/dummy.sql
       - run:
           name: install dependecies
