fix: yam config db

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,7 @@ jobs:
           name: Install MySQL CLI; Import
           command: |
             sudo apt-get install default-mysql-client
-            mysql -u admin -p
-            password
-            empatkali < sql-data/dummy.sql
+            mysql -u admin -ppassword empatkali < sql-data/dummy.sql
       - run:
           name: install dependecies
           command: |
