--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           name: Install MySQL CLI; Import
           command: |
             sudo apt-get install default-mysql-client
-            sudo mysql -u admin -ppassword empatkali < sql-data/dummy.sql
+            sudo mysql -h 127.0.0.1 -u admin -ppassword empatkali < sql-data/dummy.sql
       - run:
           name: install dependecies
           command: |
