--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
           - MYSQL_DATABASE: empatkali
           - MYSQL_USER: admin
           - MYSQL_PASSWORD: password
+          - DB_HOST: 127.0.0.1
     working_directory: ~/repo
     steps:
       - checkout
