--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
           - MYSQL_DATABASE: empatkali
           - MYSQL_USER: admin
           - MYSQL_PASSWORD: password
+          - MYSQL_ROOT_HOST: %
     working_directory: ~/my_repo
     steps:
       - checkout
