--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,15 +8,14 @@ jobs:
           - MYSQL_DATABASE: empatkali
           - MYSQL_USER: admin
           - MYSQL_PASSWORD: password
-          - MYSQL_ROOT_HOST: 127.0.0.1
     working_directory: ~/my_repo
     steps:
       - checkout
-      - run:
-          name: Install MySQL CLI; Import
-          command: |
-            sudo apt-get install default-mysql-client
-            sudo mysql -h 127.0.0.1 -u admin -ppassword empatkali < sql-data/dummy.sql
+      # - run:
+      #     name: Install MySQL CLI; Import
+      #     command: |
+      #       sudo apt-get install default-mysql-client
+      #       sudo mysql -h 127.0.0.1 -u admin -ppassword empatkali < sql-data/dummy.sql
       - run:
           name: install dependecies
           command: |
